<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AfterMainBarcode">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/new_text"
    android:padding="24dp"
    android:text=""
    android:textColor="@android:color/black"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/radiomeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/text_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast"
            android:checked="true"/>
        <RadioButton android:id="@+id/text_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch" />
        <RadioButton android:id="@+id/text_supper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supper" />
    </RadioGroup>

</LinearLayout>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/updateid"
    android:text="@string/update"
    android:padding="24dp" />
</LinearLayout>